# MusicLang

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
crates/musiclang-cli/: Cargo.toml
crates/musiclang-cli/src/: main.rs
crates/musiclang-compiler/: Cargo.toml
crates/musiclang-compiler/src/: context.rs  eval.rs  lib.rs  lower.rs  stylecheck.rs  track.rs
crates/musiclang-core/: Cargo.toml
crates/musiclang-core/src/: diagnostic.rs  lib.rs
crates/musiclang-lsp/: Cargo.toml
crates/musiclang-lsp/src/: main.rs
crates/musiclang-midi/: Cargo.toml
crates/musiclang-midi/src/: lib.rs
crates/musiclang-parser/: Cargo.toml
crates/musiclang-parser/src/: lexer.rs  lib.rs  token.rs
crates/musiclang-render/: Cargo.toml
crates/musiclang-render/src/: lib.rs
docs/: architecture.md  examples.md  language-reference.md  style-system.md
docs/requirements/: musiclang.md
editors/vscode/: package-lock.json  package.json  tsconfig.json
editors/vscode/snippets/: musiclang.json
editors/vscode/src/: extension.ts
editors/vscode/syntaxes/: musiclang.tmLanguage.json
examples/: algorithmic_expression.music  control_flow.music  custom_style.music  custom_style_violation.music  demo_cinematic_ambient.music  demo_classical_minuet.music  demo_jazz_blues.music  demo_jazz_complete.music  demo_minimal_pulse.music  drum_groove.music  loop.music  minimal.music  override.music  style_violation.music
tests/: cli.rs  examples.rs
