[package]
name = "musiclang-workspace"
edition.workspace = true
version.workspace = true
license.workspace = true
publish = false

[workspace]
members = [
    "crates/musiclang-core",
    "crates/musiclang-parser",
    "crates/musiclang-compiler",
    "crates/musiclang-midi",
    "crates/musiclang-cli",
    "crates/musiclang-lsp",
    "crates/musiclang-render",
]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.1.0"
license = "GPL-3.0-only"

[workspace.dependencies]
clap = { version = "4.5", features = ["derive"] }
midly = "0.5"
thiserror = "1.0"
lsp-server = "0.7"
lsp-types = "0.97"
serde_json = "1.0"

[dev-dependencies]
musiclang-compiler = { path = "crates/musiclang-compiler" }
musiclang-core = { path = "crates/musiclang-core" }
musiclang-midi = { path = "crates/musiclang-midi" }
