[package]
name = "musiclang-lsp"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
lsp-server.workspace = true
lsp-types.workspace = true
serde_json.workspace = true
musiclang-core = { path = "../musiclang-core" }
musiclang-parser = { path = "../musiclang-parser" }
musiclang-compiler = { path = "../musiclang-compiler" }